* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.3...dev][Unreleased]]

*** Added
+ *tetragono*: Add common used tensors for parity symmetry and some related tensor in Hubbard model with parity
  symmetry.
+ *scalapack.py*: Add documents for scalapack.py.
+ *tetraku*: Add tV model.
*** Changed
+ *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
+ *tetragono*: Simple update will check to avoid merge physical edges into a single edge with very large dimension. It
  will only merge edges if the result edge has the dimension less equal to the =threshold=, which is =6= by default.
+ *tetragono*: Use better method to estimate the variance of measurement results observed by the sampling method.
+ *TAT.py*: Use mt19937(64 bit) as the random generator instead of c++ default random generator which may be different
  on different platforms.
*** Deprecated
*** Removed
+ *tetragono*: The mirror direct sampling is removed, since it is useless according to the test result.
*** Fixed
+ *tetragono*: Fix bug in min-SR method when the model is complex, A conjugate operator was missing.
+ *tetragono*: Avoid =nan= in pseudo inverse of min-SR by checking whether the eigenvalue is zero first.
+ *tetraku*: Fix the wrong Hamiltonian for Gibbs state of Fermionic system.
+ *tetraku*: Fix the wrong sign of chemical potential for density matrix of tJ model.
+ *TAT.py*: Fix typo in the class name of parity symmetry.
+ *tetragono*: Fix the bias of the gradient given by the sampling method.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.2...v0.3.3][v0.3.3]] - 2022-03-09

*** Added
+ *tetragono*: Add mirror direct sampling which is only used for Gibbs state on square lattice, and maintains the
  symmetry of the Gibbs state.
+ *TAT.py*: Add =dtype= and =btype= class member for =Tensor= object, which makes it easier to communicate with numpy.
+ *scalapack.py*: Add a python wrapper for scalapack.
*** Changed