@@ -16,6 +16,9 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 #
 
+import numpy as np
+import TAT
+
 
 class AbstractStatePhysicsEdge:
     """
@@ -442,3 +445,45 @@ class AbstractState:
             for l1, l2 in self.sites():
                 self._site_number += len(self.physics_edges[l1, l2])
         return self._site_number
+
+    def numpy_hamiltonian(self):
+        """
+        Get the numpy array as the hamiltonian, only work for no symmetry model.
+
+        Returns
+        -------
+        np.ndarray
+            The hamiltonian in numpy array format.
+        """
+        if self.Tensor.model != TAT.No:
+            showln("It is only allowed to export no symmetry model to numpy array")
+            return
+        dtype = np.dtype(self.Tensor.dtype)
+        edge_order = [(l1, l2, orbit) for l1, l2 in self.sites() for orbit in self.physics_edges[l1, l2]]
+        edge_dimension = [self.physics_edges[position].dimension for position in edge_order]
+        total_dimension = np.prod(edge_dimension)
+        result = None
+        for positions, hamiltonian in self._hamiltonians.items():
+            body = hamiltonian.rank // 2
+            indices = [edge_order.index(position) for position in positions]
+            sorted_indices = sorted(indices)
+            sort_order = [indices.index(index) for index in sorted_indices]
+            this_term = hamiltonian.blocks[[
+                *(f"I{index}" for index in sort_order), *(f"O{index}" for index in sort_order)
+            ]]
+            interval_dimensions = [
+                np.prod(edge_dimension[(1 + sorted_indices[i - 1] if i != 0 else None):(
+                    sorted_indices[i] if i != body else None)],
+                        dtype=int) for i in range(body + 1)
+            ]
+            interval_matrix = [np.identity(interval_dimension) for interval_dimension in interval_dimensions]
+            for index, interval_matrix in enumerate(interval_matrix):
+                this_term = np.tensordot(this_term, interval_matrix, 0)
+                this_term = np.moveaxis(this_term, -1, index * 2 + body + index)
+                this_term = np.moveaxis(this_term, -1, index * 2)
+            this_term = this_term.reshape([total_dimension, total_dimension])
+            if result is None:
+                result = this_term
+            else:
+                result += this_term
+        return result
